Update website: layouts and content

--- a/fcsabet/i18n/en.yaml
+++ b/fcsabet/i18n/en.yaml
@@ -122,10 +122,10 @@
   translation: Contact
 
 - id: pu_nav
-  translation: PU Navigation
+  translation: PU Computing
 
 - id: cs_nav
-  translation: FCS Navigation
+  translation: Resources
 
 - id: office
   translation: Office Contact
